# UserSU

./: .gitignore  README.md  flake.nix  gradlew  justfile  settings.gradle.kts
.github/workflows/: build_release.yml
dart/: pubspec.yaml
dart/test/: su_client_test.dart
psu/: Cargo.toml
psu/psudo/: main.rs
psu/src/: main.rs
psu/src/psudo/: main.rs
sandbox/: Cargo.toml
usersu/: build.gradle.kts
usersu-server/: build.gradle.kts
usersu-server/src/main/aidl/android/app/: IServiceConnection.aidl
usersu-server/src/main/aidl/dev/github/thepanoc95/usersu/: IUserSU.aidl
usersu-server/src/main/cpp/: CMakeLists.txt
usersu-server/src/main/cpp/dev/github/thepanoc95/usersu/backend/: UsermodeKernel.cpp
usersu-server/src/main/java/dev/github/thepanoc95/usersu/backend/: UsermodeKernel.kt
usersu-server/src/main/java/dev/github/thepanoc95/usersu/server/: ShellSession.kt  SuClient.kt  UserSUServer.kt
usersu/.cargo/: config.toml
usersu/src/main/: AndroidManifest.xml
usersu/src/main/aidl/dev/github/thepanoc95/usersu/service/: IUserSUDaemonService.aidl
usersu/src/main/assets/: proot  psu  psudo  start.sh  startkernel.sh  usersu-server.dex
usersu/src/main/java/dev/github/thepanoc95/usersu/: MainActivity.kt
usersu/src/main/java/dev/github/thepanoc95/usersu/provider/: UserSUProvider.kt
usersu/src/main/java/dev/github/thepanoc95/usersu/service/: UserSUDaemonService.kt
